<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.hs-emden-leer</groupId>
	<artifactId>smart-robots</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<repositories>
		<repository>
			<id>central</id>
			<url>http://central.maven.org/maven2/</url>
		</repository>
		<repository>
			<id>tilab</id>
			<url>http://jade.tilab.com/maven/</url>
		</repository>
	</repositories>
	<properties>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<dependencies>
		<dependency>
			<groupId>com.sparkjava</groupId>
			<artifactId>spark-core</artifactId>
			<version>2.5.4</version>
		</dependency>
		<dependency>
			<groupId>com.tilab.jade</groupId>
			<artifactId>jade</artifactId>
			<version>4.5.0</version>
<!-- 			<scope>system</scope> -->
<!-- 			<systemPath>${project.basedir}/src/main/lib/jade.jar</systemPath> -->
		</dependency>
		
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.0</version>
		</dependency>
		<dependency>
			<groupId>org.tinylog</groupId>
			<artifactId>tinylog</artifactId>
			<version>1.1</version>
		</dependency>
	</dependencies>
</project>